--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,6 @@
     font-weight: normal;
   }
 
-.container {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
 
 header {
     background-color: #4c8f97;
@@ -46,7 +40,6 @@ header {
     margin: 0 auto;
     width: 900px;
     height: 120px;
-    background-color: red;
 }
 
 .nav-links {
@@ -75,6 +68,7 @@ main {
     background-color: #ededed;
     z-index: -1;
     width: 100vw;
+    height: 1580px;
 }
 
 .main-content {
@@ -82,7 +76,7 @@ main {
     flex-direction: column;
     margin: 0 auto;
     width: 900px;
-    height: 100%;
+    height: 100vh;
 }
 
 .first-box {
@@ -101,7 +95,11 @@ main {
 }
 
 .first-box h2 {
-    margin-left: 20px;
+    margin-left: 50px;
+}
+
+.first-box img {
+    margin-right: 25px;
 }
 
 .second-box {
@@ -126,6 +124,21 @@ main {
 
 .img-border {
     border: 5px solid #5fb5bd;
+    position: relative;
+    display: inline-block;
+    background: white;
+}
+
+.img-border::after {
+    content: '' !important;
+    position: absolute;
+    bottom: -20px;
+    left: 8%;
+    right: 8%;
+    height: 25px;
+    border-radius: 50%;
+    box-shadow: 0 20px 35px rgba(0, 0, 0, 0.5);
+
 }
 
 .second-box h3 {
@@ -138,14 +151,36 @@ main {
 }
 
 .third-box {
+    display: flex;
+    flex-direction: row;
     width: 100%;
     margin: 50px 0;
 }
 
 .featured {
+    position: relative;
+    width: 47%;
+    font-family: arimo-bold;
+}
+
+.featured-title {
+    position: absolute;
+    font-family: comfortaa;
+    padding: 10px 30px;
+    margin: -20px 0px 0px 20px;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+    z-index: 1;
+}
+
+.featured-content {
+    position: absolute;
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 100%;
+    padding: 50px 0px;
+    background-color: white;
     border: 5px solid #5fb5bd;
     font-family: arimo-bold;
 }
@@ -163,18 +198,98 @@ main {
 
 
 .featured-list li {
-    margin: 15px 25px;
-    font-size: 12px;
-    color: rgb(71, 71, 71);
+    margin: 0px 25px;
+    margin-top: 25px;
+    font-size: 14px;
+    color: rgb(119, 119, 119);
+    line-height: 25px;
 }
 
-.title {
-    font-family: comfortaa;
-    padding: 10px 0;
-    margin: 0 100px 50px 20px;
-    text-align: center;
+.hairstyle {
+    display: flex;
+    position: relative;
+    margin-left: 50px;
+    width: 50%;
+    font-family: arimo-bold;
+}
+
+.hairstyle-content {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding: 50px 0px;
+    background-color: #519194;
+    border: 5px solid #5fb5bd;
+    font-family: arimo-bold;
+}
+
+.hairstyle-content p {
+    margin: 0px 25px;
+    margin-top: 25px;
     font-size: 14px;
     color: white;
+    line-height: 25px;
+}
+
+.hairstyle-title {
+    position: absolute;
+    font-family: comfortaa;
+    padding: 10px 30px;
+    margin: -20px 0px 0px 20px;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+    z-index: 1;
+}
+
+.loosing-hair {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 250px;
+}
+
+.loosing-hair p {
+    font-size: 14px;
+    margin-left: 185px;
+}
+
+.bald-logo {
+    position: absolute;
+    margin: 5px 250px 0px 20px;
+    z-index: 1;
+}
+
+.footer-content {
+    background-color: #4c8f97;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 120px;
+    width: 100vw;
+}
+
+.footer-content p {
+    font-size: 14px;
+    color: white;
+    margin-left: 350px;
+}
+
+.footer-links {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 20px;
+    margin-left: 150px;
+    background-color: #387a82;
+}
+
+.footer-links li {
+    margin: 0 10px;
 }
 
 .white {
@@ -203,4 +318,53 @@ main {
 
 .arimo-bold {
     font-family: arimo-bold;
+}
+
+
+#google-plus-hover {
+    display: none;
+}
+
+#google-plus:hover #google-plus-icon{
+    display: none;
+}
+
+#google-plus:hover #google-plus-hover{
+    display: block;
+}
+
+#pinterest-hover {
+    display: none;
+}
+
+#pinterest:hover #pinterest-icon{
+    display: none;
+}
+
+#pinterest:hover #pinterest-hover{
+    display: block;
+}
+
+#facebook-hover {
+    display: none;
+}
+
+#facebook:hover #facebook-icon{
+    display: none;
+}
+
+#facebook:hover #facebook-hover{
+    display: block;
+}
+
+#twitter-hover {
+    display: none;
+}
+
+#twitter:hover #twitter-icon{
+    display: none;
+}
+
+#twitter:hover #twitter-hover{
+    display: block;
 }
