--- a/styles.css
+++ b/styles.css
@@ -52,10 +52,16 @@ header {
 .logo {
     font-family: arimo-bold;
     color: white;
+    text-decoration: none;
     font-size: 25px;
     text-align: center;
     padding: 25px 30px;
     margin: 30px 0 0 0;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
 
 .nav-links li {
