--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ header {
     flex-direction: row;
     align-items: center;
     height: 120px;
-    width: 100vw;
+    width: 100%;
 }
 
 .header-content {
@@ -73,7 +73,7 @@ a {
 main {
     background-color: #ededed;
     z-index: -1;
-    width: 100vw;
+    width: 100%;
     height: 1580px;
 }
 
@@ -276,7 +276,7 @@ main {
     justify-content: center;
     align-items: center;
     height: 120px;
-    width: 100vw;
+    width: 100%;
 }
 
 .footer-content p {
